// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > Props > should match snapshot 1`] = `
<div>
  <span
    class="inline-flex align-center items-center align-self-center gap-1 rounded-full border font-semibold text-secondary-500 bg-secondary-50 border-secondary-300 text-sm min-h-7.5 px-2 py-1"
  >
    Content
  </span>
</div>
`;

exports[`Badge > Props > should match snapshot when rendering \`as\` \`<div>\` 1`] = `
<div>
  <div
    class="inline-flex align-center items-center align-self-center gap-1 rounded-full border font-semibold text-secondary-500 bg-secondary-50 border-secondary-300 text-sm min-h-7.5 px-2 py-1"
  >
    Content
  </div>
</div>
`;

exports[`Badge > Props > should match snapshot with \`size\` 1`] = `
<div>
  <span
    class="inline-flex align-center items-center align-self-center gap-1 rounded-full border font-semibold text-secondary-500 bg-secondary-50 border-secondary-300 text-base min-h-9.5 px-3 py-1.5"
  >
    Content
  </span>
</div>
`;

exports[`Badge > Props > should match snapshot with default (solid) \`variant\` 1`] = `
<div>
  <span
    class="inline-flex align-center items-center align-self-center gap-1 rounded-full border font-semibold text-primary-500 bg-primary-50 border-primary-300 text-sm min-h-7.5 px-2 py-1"
  >
    Content
  </span>
</div>
`;
